unpackaged/main/default/objects/OrderSummary/fields/BillingContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>BillingContactFirstName__c</fullName>
    <label>Billing Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>