unpackaged/main/default/objects/OrderSummary/fields/captureAtShipment__c.field-meta.xml
<CustomField>
    <fullName>captureAtShipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>capture At Shipment</label>
    <type>Checkbox</type>
</CustomField>