unpackaged/main/default/objects/OrderSummary/fields/CaptureStatus__c.field-meta.xml
<CustomField>
    <fullName>CaptureStatus__c</fullName>
    <label>Capture Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To capture</fullName>
            </value>
            <value>
                <fullName>Capture Error</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Captured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>