unpackaged/main/default/objects/OrderSummary/fields/cegidDepositId__c.field-meta.xml
<CustomField>
    <fullName>cegidDepositId__c</fullName>
    <label>CEGID Deposit ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>