unpackaged/main/default/objects/OrderSummary/fields/cegidErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>cegidErrorMessage__c</fullName>
    <label>Cegid Error Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>