unpackaged/main/default/objects/OrderSummary/fields/cegidOrderId__c.field-meta.xml
<CustomField>
    <fullName>cegidOrderId__c</fullName>
    <label>cegid Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>