unpackaged/main/default/objects/OrderSummary/fields/CountryTech__c.field-meta.xml
<CustomField>
    <fullName>CountryTech__c</fullName>
    <description>Technical field used to get country value set values within apex code</description>
    <label>Country (tech)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>