unpackaged/main/default/objects/OrderSummary/fields/CreateFulfillmentOrderImmediatly__c.field-meta.xml
<CustomField>
    <fullName>CreateFulfillmentOrderImmediatly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Fulfillment Order Immediatly</label>
    <type>Checkbox</type>
</CustomField>