unpackaged/main/default/objects/OrderSummary/fields/CSC_Comment__c.field-meta.xml
<CustomField>
    <fullName>CSC_Comment__c</fullName>
    <label>CSC Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>