unpackaged/main/default/objects/OrderSummary/fields/eddScore__c.field-meta.xml
<CustomField>
    <fullName>eddScore__c</fullName>
    <label>Edd Score</label>
    <length>18</length>
    <type>Text</type>
</CustomField>