unpackaged/main/default/objects/OrderSummary/fields/expectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>expectedDeliveryDate__c</fullName>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>