unpackaged/main/default/objects/OrderSummary/fields/FO_Capture_Error__c.field-meta.xml
<CustomField>
    <fullName>FO_Capture_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FO Capture Error</label>
    <type>Checkbox</type>
</CustomField>