unpackaged/main/default/objects/OrderSummary/fields/IsGlobalE__c.field-meta.xml
<CustomField>
    <fullName>IsGlobalE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GlobalE</label>
    <type>Checkbox</type>
</CustomField>