unpackaged/main/default/objects/OrderSummary/fields/LaunchRetryAllocation__c.field-meta.xml
<CustomField>
    <fullName>LaunchRetryAllocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch Retry Allocation</label>
    <type>Checkbox</type>
</CustomField>