unpackaged/main/default/objects/OrderSummary/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>18</length>
    <type>Text</type>
    
</CustomField>