unpackaged/main/default/objects/OrderSummary/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>