unpackaged/main/default/objects/OrderSummary/fields/OrderedDate__c.field-meta.xml
<CustomField>
    <fullName>OrderedDate__c</fullName>
    <formula>DATEVALUE(DATETIMEVALUE(OrderedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderedDate</label>
    <type>Date</type>
</CustomField>