unpackaged/main/default/objects/OrderSummary/fields/OriginalOrderSummary__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>Order_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>