unpackaged/main/default/objects/OrderSummary/fields/OriginalReturnOrder__c.field-meta.xml
<CustomField>
    <fullName>OriginalReturnOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>Order_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>