unpackaged/main/default/objects/OrderSummary/fields/passedFraudScreening__c.field-meta.xml
<CustomField>
    <fullName>passedFraudScreening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passed Fraud Screening</label>
    <type>Checkbox</type>
</CustomField>