unpackaged/main/default/objects/OrderSummary/fields/ProfileForCancelButton__c.field-meta.xml
<CustomField>
    <fullName>ProfileForCancelButton__c</fullName>
    <formula>IF((NOT(ISPICKVAL(OrderLifeCycleType, &quot;Unmanaged&quot;)) &amp;&amp;
$Profile.Name != &apos;Finance&apos; &amp;&amp;
$Permission.Identity_profile = false &amp;&amp;
($Permission.PS_CSC_Cancel = true || ($Permission.CSC_Permission = false &amp;&amp; $Permission.PS_CSC_Cancel = false)) ),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProfileForCancelButton</label>
    <type>Checkbox</type>
</CustomField>