unpackaged/main/default/objects/OrderSummary/fields/reconciliationId__c.field-meta.xml
<CustomField>
    <fullName>reconciliationId__c</fullName>
    <label>Reconciliation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>