unpackaged/main/default/objects/OrderSummary/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(CONTAINS(&quot;US,CA,MX&quot;,Tech_ShippingCountry__c),&quot;North America&quot;,
IF(CONTAINS(&quot;AU,KR&quot;,Tech_ShippingCountry__c),&quot;APAC&quot;,
IF(CONTAINS(&quot;JP&quot;,Tech_ShippingCountry__c),&quot;JP&quot;,
IF(CONTAINS(&quot;BR&quot;,Tech_ShippingCountry__c),&quot;BR&quot;,
IF(CONTAINS(&quot;AE&quot;,Tech_ShippingCountry__c),&quot;AE&quot;,
&quot;EU&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>