unpackaged/main/default/objects/OrderSummary/fields/RetryAllocationProcessed__c.field-meta.xml
<CustomField>
    <fullName>RetryAllocationProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Allocation Processed</label>
    <type>Checkbox</type>
</CustomField>