unpackaged/main/default/objects/OrderSummary/fields/RI_createdBy__c.field-meta.xml
<CustomField>
    <fullName>RI_createdBy__c</fullName>
    <label>RI_createdBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>