unpackaged/main/default/objects/OrderSummary/fields/SalesChannelName__c.field-meta.xml
<CustomField>
    <fullName>SalesChannelName__c</fullName>
    <formula>SalesChannel.ExternalChannelNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Channel Name</label>
    <type>Text</type>
</CustomField>