unpackaged/main/default/objects/OrderSummary/fields/StandardProductsCount__c.field-meta.xml
<CustomField>
    <fullName>StandardProductsCount__c</fullName>
    <label>Standard Products Count</label>
    <summaryFilterItems>
        <field>OrderItemSummary.IsPreOrder__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>