unpackaged/main/default/objects/OrderSummary/fields/StatusForCancelButton__c.field-meta.xml
<CustomField>
    <fullName>StatusForCancelButton__c</fullName>
    <formula>IF(NOT(
ISPICKVAL(Status, &quot;Partially Fulfilled&quot;) ||
ISPICKVAL(Status, &quot;Fulfilled&quot;) ||
ISPICKVAL(Status, &quot;Canceled&quot;)
),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusForCancelButton</label>
    <type>Checkbox</type>
</CustomField>