unpackaged/main/default/objects/OrderSummary/fields/StoreOrigin__c.field-meta.xml
<CustomField>
    <fullName>StoreOrigin__c</fullName>
    <label>StoreOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>