unpackaged/main/default/objects/OrderSummary/fields/storeToWebType__c.field-meta.xml
<CustomField>
    <fullName>storeToWebType__c</fullName>
    <label>storeToWebType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>