unpackaged/main/default/objects/OrderSummary/fields/TE_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>TE_Cancellation_Date__c</fullName>
    <label>TE Cancellation Date</label>
    <type>DateTime</type>
</CustomField>