unpackaged/main/default/objects/OrderSummary/fields/Tech_BrazilianAddressVerified__c.field-meta.xml
<CustomField>
    <fullName>Tech_BrazilianAddressVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_BrazilianAddressVerified</label>
    <type>Checkbox</type>
</CustomField>