unpackaged/main/default/objects/OrderSummary/fields/Tech_BrazilianShippingAddressVerified__c.field-meta.xml
<CustomField>
    <fullName>Tech_BrazilianShippingAddressVerified__c</fullName>
    <label>Tech BrazilianShippingAddressVerified</label>
    <summaryFilterItems>
        <field>OrderDeliveryGroupSummary.Tech_BrazilianAddressVerified__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderDeliveryGroupSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>