unpackaged/main/default/objects/OrderSummary/fields/Tech_CancelItem__c.field-meta.xml
<CustomField>
    <fullName>Tech_CancelItem__c</fullName>
    <label>Tech_CancelItem</label>
    <summaryFilterItems>
        <field>OrderItemSummary.Type</field>
        <operation>equals</operation>
        <value>Order Product</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItemSummary.Current__c</field>
        <operation>notContain</operation>
        <value>Insufficient Stock</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>