unpackaged/main/default/objects/OrderSummary/fields/Tech_isPreorder__c.field-meta.xml
<CustomField>
    <fullName>Tech_isPreorder__c</fullName>
    <label>Tech_isPreorder</label>
    <summaryFilterItems>
        <field>OrderItemSummary.IsPreOrder__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItemSummary.Status</field>
        <operation>equals</operation>
        <value>ORDERED</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>