unpackaged/main/default/objects/OrderSummary/fields/Tech_OrderItemSummaries_Count__c.field-meta.xml
<CustomField>
    <fullName>Tech_OrderItemSummaries_Count__c</fullName>
    <label>Tech_OrderItemSummaries_Count</label>
    <summaryForeignKey>OrderItemSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>