unpackaged/main/default/objects/OrderSummary/fields/tech_os_store_shipping_method__c.field-meta.xml
<CustomField>
    <fullName>tech_os_store_shipping_method__c</fullName>
    <description>count (store) delivery method associated to this order summary</description>
    <label>tech_os_store_shipping_method</label>
    <summaryFilterItems>
        <field>OrderDeliveryGroupSummary.CLICKCOLLECT_isStore__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderDeliveryGroupSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>