unpackaged/main/default/objects/OrderSummary/fields/Tech_PE_DisplayButton__c.field-meta.xml
<CustomField>
    <fullName>Tech_PE_DisplayButton__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tech_PE_DisplayButton</label>
    <type>Checkbox</type>
</CustomField>