unpackaged/main/default/objects/OrderSummary/fields/tech_PE_Fulfillment_Count__c.field-meta.xml
<CustomField>
    <fullName>tech_PE_Fulfillment_Count__c</fullName>
    <label>tech PE Fulfillment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>