unpackaged/main/default/objects/OrderSummary/fields/Tech_ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>Tech_ShippingCountry__c</fullName>
    <label>Shipping Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>