unpackaged/main/default/objects/OrderSummary/fields/Tech_ShippingState__c.field-meta.xml
<CustomField>
    <fullName>Tech_ShippingState__c</fullName>
    <label>Shipping State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>