unpackaged/main/default/objects/OrderSummary/fields/TECH_TaxId_BR__c.field-meta.xml
<CustomField>
    <fullName>TECH_TaxId_BR__c</fullName>
    <label>TECH_TaxId_BR</label>
    <summaryFilterItems>
        <field>OrderDeliveryGroupSummary.TECH_TaxId_Validation__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderDeliveryGroupSummary.OrderSummaryId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>