unpackaged/main/default/objects/OrderSummary/fields/Tech_VAT_Id_Customer__c.field-meta.xml
<CustomField>
    <fullName>Tech_VAT_Id_Customer__c</fullName>
    <label>VAT_ID_CUSTOMER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>