unpackaged/main/default/objects/OrderSummary/fields/VAT_ID__c.field-meta.xml
<CustomField>
    <fullName>VAT_ID__c</fullName>
    <label>VAT ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>