unpackaged/main/default/objects/OrderSummary/validationRules/VR_CheckOrderSummary_OnHold.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CheckOrderSummary_OnHold</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(On_Hold__c),On_Hold__c = TRUE, AND( ISPICKVAL(Status, &apos;Fulfilled&apos;), ISPICKVAL(Status, &apos;Partially Fulfilled&apos;), ISPICKVAL(Status, &apos;Canceled&apos;)))</errorConditionFormula>
    <errorMessage>You cannot put the Order Summary on hold.</errorMessage>
</ValidationRule>