unpackaged/main/default/objects/OrderSummary/validationRules/VR_CountryISO2.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_CountryISO2</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISBLANK(BillingCountry),
    NOT(REGEX(BillingCountry, &quot;^[a-zA-Z]{2}$&quot;))
)</errorConditionFormula>
    <errorMessage>The value should contain 2 characters and should not be empty.</errorMessage>
</ValidationRule>