unpackaged/main/default/objects/OrderSummary/listViews/UAE_Orders.listView-meta.xml
<ListView>
    <fullName>UAE_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>GrandTotalAmount</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrencyIsoCode</field>
        <operation>equals</operation>
        <value>AED</value>
    </filters>
    <filters>
        <field>Name</field>
        <operation>notContain</operation>
        <value>WEBAEEC</value>
    </filters>
    <label>UAE Orders</label>
</ListView>