unpackaged/main/default/objects/OrderSummary/listViews/US_C_C_Orders.listView-meta.xml
<ListView>
    <fullName>US_C_C_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>OrderedDate</columns>
    <columns>GrandTotalAmount</columns>
    <columns>TotalPrdAmt</columns>
    <columns>CreatedDate</columns>
    <columns>SalesChannelName__c</columns>
    <columns>TotalAdjustedDelive758</columns>
    <columns>CurrencyIsoCode</columns>
    <columns>BillingEmailAddress</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrencyIsoCode</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Waiting for goods</value>
    </filters>
    <label>NAM Orders</label>
</ListView>