unpackaged/main/default/objects/OrderSummary/listViews/US_Orders.listView-meta.xml
<ListView>
    <fullName>US_Orders</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>GrandTotalAmount</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrencyIsoCode</field>
        <operation>equals</operation>
        <value>GBP</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Fulfilling</value>
    </filters>
    <label>UK Orders</label>
</ListView>